--- a/views/listetemporaires.html
+++ b/views/listetemporaires.html
@@ -9,22 +9,22 @@
 	
 
     <!-- Bootstrap core CSS     -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../public/assets/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Animation library for notifications   -->
-    <link href="assets/css/animate.min.css" rel="stylesheet"/>
+    <link href="../public/assets/css/animate.min.css" rel="stylesheet"/>
 
     <!--  Paper Dashboard core CSS    -->
-    <link href="assets/css/paper-dashboard.css" rel="stylesheet"/>
+    <link href="../public/assets/css/paper-dashboard.css" rel="stylesheet"/>
 
 
     <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="assets/css/demo.css" rel="stylesheet" />
+    <link href="../public/assets/css/demo.css" rel="stylesheet" />
 
 
     <!--  Fonts and icons     -->
    
-    <link href="assets/css/themify-icons.css" rel="stylesheet">
+    <link href="../public/assets/css/themify-icons.css" rel="stylesheet">
 
 </head>
 <body>
@@ -45,7 +45,7 @@
             </div>
 
             <ul class="nav">
-                <li class="active">
+                <li>
                     <a href="index.html">
                         <i class="ti-panel"></i>
                         <p>Acceuil</p>
@@ -63,7 +63,7 @@
                         <p>Les projets</p>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="table.html">
                         <i class="ti-text"></i>
                         <p>Les temporaires</p>
