--- a/views/listetemporaires.html
+++ b/views/listetemporaires.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	
+
 
 	<title>GESTION DES TEMPORAIRES</title>
 
-	
+
 
     <!-- Bootstrap core CSS     -->
     <link href="../public/assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -23,11 +23,11 @@
 
 
     <!--  Fonts and icons     -->
-   
+
     <link href="../public/assets/css/themify-icons.css" rel="stylesheet">
 
 </head>
-<body>
+<body onload="listeTemporaire()">
 
 <div class="wrapper">
     <div class="sidebar" data-background-color="white" data-active-color="danger">
@@ -46,33 +46,29 @@
 
             <ul class="nav">
                 <li>
-                    <a href="index.html">
-                        <i class="ti-panel"></i>
+                    <a href="../index.html">
+                        <i class="ti-home"></i>
                         <p>Acceuil</p>
                     </a>
                 </li>
-                <li>
-                    <a href="user.html">
-                        <i class="ti-user"></i>
-                        <p>Mon profile</p>
-                    </a>
-                </li>
+								<li class="active">
+										<a href="temporaire.html">
+												<i class="ti-user"></i>
+												<p>Les temporaires</p>
+										</a>
+								</li>
+
                 <li>
                     <a href="table.html">
                         <i class="ti-view-list-alt"></i>
-                        <p>Les projets</p>
+                        <p> Mon profil </p>
                     </a>
                 </li>
-                <li class="active">
-                    <a href="table.html">
-                        <i class="ti-text"></i>
-                        <p>Les temporaires</p>
-                    </a>
-                </li>
-                
-             
-            
-				
+
+
+
+
+
             </ul>
     	</div>
     </div>
@@ -90,12 +86,12 @@
                     <a class="navbar-brand" href="#">Bienvenue dans l'espace de gestion des temporaires</a>
                 </div>
                 <div class="collapse navbar-collapse">
-                    
+
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="creerprojet.html" class="dropdown-toggle" data-toggle="dropdown">
+                            <a href="temporaire.html" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="ti-new-window"></i>
-								           <p>Creer un nouveau projet</p>
+								           <p>Creer un nouveau temporaire</p>
                             </a>
                         </li>
 
@@ -107,7 +103,7 @@
         </nav>
 
 
-        <br> <br> <br>
+
 
 
 
@@ -118,42 +114,45 @@
                     <div class="card card-plain">
                         <div class="header">
                             <h4 class="title">Liste des temporaires</h4>
-                            
+
                         </div>
                         <div class="content table-responsive table-full-width">
                             <table class="table table-hover">
                                 <thead>
-                                   
+
                                     <th>Nom</th>
                                     <th>Prenom</th>
                                     <th>Telephone</th>
                                     <th>Modifier</th>
                                     <th>Supprimer</th>
-                                    
+
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>Sidibe</td>
-                                        <td>Mohamed</td>
-                                        <td>77 861 83 13</td>
-                                        <td><a href="modifiertemporaire.html"><span class="ti-pencil"></span></a></td>
-                                        <td><a href=""><span class="ti-trash"></span></a></td>
-                                        
-                                        
+
+                                        <!-- <td><a href="modifiertemporaire.html"><span class="ti-pencil"></span></a></td>
+                                        <td><a href=""><span class="ti-trash"></span></a></td> -->
+
+
                                     </tr>
                                     <tr>
-                                            <td>Sidibe</td>
-                                            <td>Mohamed</td>
-                                            <td>77 861 83 13</td>
-                                            <td><a href="modifiertemporaire.html"><span class="ti-pencil"></span></a></td>
-                                            <td><a href=""><span class="ti-trash"></span></a></td>
-                                            
-                                            
+
+                                        
+
                                 </tr>
-                                    
+
                                 </tbody>
                             </table>
 
                         </div>
                     </div>
                 </div>
+
+
+
+							</body>
+
+
+							<script src="../public/js/function.js"></script>
+
+							</html>
