--- a/views/temporaire.html
+++ b/views/temporaire.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	
+
 
 	<title>GESTION DES TEMPORAIRES</title>
 
-	
+
 
     <!-- Bootstrap core CSS     -->
     <link href="../public/assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -23,11 +23,11 @@
 
 
     <!--  Fonts and icons     -->
-   
+
     <link href="../public/assets/css/themify-icons.css" rel="stylesheet">
 
 </head>
-<body>
+<body onload="loading()">
 
 <div class="wrapper">
     <div class="sidebar" data-background-color="white" data-active-color="danger">
@@ -51,28 +51,24 @@
                         <p>Acceuil</p>
                     </a>
                 </li>
+								<li class="active">
+										<a href="table.html">
+												<i class="ti-text"></i>
+												<p>Les temporaires</p>
+										</a>
+								</li>
+
                 <li>
                     <a href="user.html">
                         <i class="ti-user"></i>
                         <p>Mon profile</p>
                     </a>
                 </li>
-                <li>
-                    <a href="table.html">
-                        <i class="ti-view-list-alt"></i>
-                        <p>Les projets</p>
-                    </a>
-                </li>
-                <li class="active">
-                    <a href="table.html">
-                        <i class="ti-text"></i>
-                        <p>Les temporaires</p>
-                    </a>
-                </li>
-                
-             
-            
-				
+
+
+
+
+
             </ul>
     	</div>
     </div>
@@ -87,14 +83,14 @@
                         <span class="icon-bar bar2"></span>
                         <span class="icon-bar bar3"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Bienvenue dans l'espace de gestion des temporaires</a>
+                    <a class="navbar-brand" href="#">Gestion des temporaires</a>
                 </div>
                 <div class="collapse navbar-collapse">
-                    
+
                     <ul class="nav navbar-nav navbar-right">
                         <li>
                             <a href="listetemporaires.html" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="ti-power-off"></i>
+                                <i class="ti-pencil-alt2"></i>
 								           <p>Suivi des temporaires</p>
                             </a>
                         </li>
@@ -110,12 +106,15 @@
         <br>
 
 
-       
+
                 <div class="card">
                     <div class="header">
                         <h4 class="title">Ajouter un temporaire</h4>
                     </div>
                     <div class="content">
+
+								<p id="success" style="color : green"></p>
+
                         <form>
                                 <div class="row">
                                         <div class="col-md-6">
@@ -124,8 +123,8 @@
                                                 <input type="date" class="form-control border-input" id="darrive">
                                             </div>
                                         </div>
-                                    
-                                   
+
+
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label>heure arrivée</label>
@@ -141,7 +140,7 @@
                                                 </div>
 
                                 </div>
-                                     
+
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="form-group">
@@ -183,56 +182,64 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label>Numero Tel </label>
-                                            <input type="number" class="form-control border-input" placeholder="Telephoen" id="tel">
+                                            <input type="number" class="form-control border-input" placeholder="telephone" id="tel">
                                         </div>
                                     </div>
                                 </div>
 
                             <div class="text-center">
-                                <button onclick="AjouterTemporaire()" type="button" class="btn btn-info btn-fill btn-wd">Ajouter</button>
+                                <button onclick="AjouterTemporaire()" type="button" class="btn btn-success btn-fill btn-wd">Ajouter</button>
                             </div>
                             <div class="clearfix"></div>
                         </form>
                     </div>
                 </div>
-        
 
-        
-        
-        
-        
+
+
+
+
+
             </div>
         </div>
-        
-        
+
+
         </body>
 
-             <script src="../public/js/controllers/controller.js"></script>
-             <script src="../public/js/bd/Connexion.js"></script>
-             <script src="../public/js/bd/TemporaireDAO.js"></script>
-             <script src="../public/js/bd/TemporaireController.js"></script>
-             <script src="../public/js/bd/Temporaire.js"></script>
+             	<script src="../public/js/function.js"></script>
 
-        
+
             <!--   Core JS Files   -->
             <script src="../public/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
             <script src="../public/assets/js/bootstrap.min.js" type="text/javascript"></script>
-        
+
             <!--  Checkbox, Radio & Switch Plugins -->
             <script src="../public/assets/js/bootstrap-checkbox-radio.js"></script>
-        
+
             <!--  Charts Plugin -->
             <script src="../public/assets/js/chartist.min.js"></script>
-        
+
             <!--  Notifications Plugin    -->
             <script src="../public/assets/js/bootstrap-notify.js"></script>
-        
+
             <!--  Google Maps Plugin    -->
-            
+
             <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
             <script src="../public/assets/js/paper-dashboard.js"></script>
-        
+
             <!-- Paper Dashboard DEMO methods, don't include it in your project! -->
             <script src="../public/assets/js/demo.js"></script>
-        
+
+<script type="text/javascript">
+
+function loading() {
+
+	document.getElementById('harrive').value= new Date().toLocaleTimeString()
+
+
+}
+
+
+</script>
+
         </html>
